# file_reader_rust

./: Cargo.toml  LICENSE  README.md  test.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
